// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Items should apply custom classes 1`] = `
<div
  className="test-class"
>
  <NavItem
    badgeValue={0}
    handleToggle={[Function]}
    isActive={false}
    text="testIcon"
    url="#testPath"
  />
</div>
`;

exports[`Nav Items should render a default component 1`] = `
<div
  className=""
>
  <NavItem
    badgeValue={0}
    handleToggle={[Function]}
    isActive={false}
    text="testIcon"
    url="#testPath"
  />
</div>
`;
